--- a/css/homepage.css
+++ b/css/homepage.css
@@ -289,7 +289,7 @@
 
 .mobile .container-div {
     height: 100vh;
-    padding-bottom: 20px;
+    padding-bottom: 75px;
     padding-top: 75px;
 }
 
