--- a/css/mobile.css
+++ b/css/mobile.css
@@ -41,7 +41,7 @@
 
 .container-div {
     height: 100vh;
-    padding-bottom: 20px;
+    padding-bottom: 75px;
     padding-top: 75px;
 }
 
